--- a/index.html
+++ b/index.html
@@ -43,10 +43,16 @@
     <div class="battle-log">
         <button id="attack-button" class="action-button">Attack</button>
         <button id="heal-button" class="action-button">Heal</button>
-        <div class="combat-log" id="combatLog"></div>
-        <div class="current-player" id="currentPlayerDisplay">Test  : None</div>
+    <div class="combat-log" id="combatLog"></div>
+    <div class="current-player" id="currentPlayerDisplay">Test: None</div>
     </div>
     
+    <div class = "heal-targets">
+        <button id="heal-warrior" class="heal-button">Heal Warrior</button>
+        <button id="heal-tanker" class="heal-button">Heal Tanker</button>
+        <button id="heal-assassin" class="heal-button">Heal Assassin</button>
+        <button id="heal-supporter" class="heal-button">Heal Supporter</button>
+    </div> 
 
     <script src="mainScript.js"></script>
 </body>
